# chess

./: .gitignore  CMakeLists.txt  README.md  play
.github/workflows/: build.yml
src/: bit_board.cpp  bit_board.hpp  bit_board_constants.hpp  board.cpp  board.hpp  debug.cpp  fen_parser.cpp  fen_parser.hpp  move.cpp  move.hpp  play.cpp  position.cpp  position.hpp  types.cpp  types.hpp
test/: perft.cpp
